2004-09-09  Kim F. Storm  <storm@cua.dk>

	* kmacro.el (kmacro-bind-to-key): Associate dedicated macro
	counter and format with binding.
	(kmacro-name-last-macro): New defun.  Like name-last-kbd-macro, but
	the declared macro uses own macro counter and format.  Give symbol
	kmacro property.
	(kmacro-keymap): Bind kmacro-name-last-macro to n.
	(kmacro-start-macro, kmacro-end-macro, kmacro-call-macro)
	(kmacro-end-and-call-macro): Doc fix.

2004-09-09  Lars Hansen  <larsh@math.ku.dk>

	* desktop.el (desktop-clear-preserve-buffers): Remove
	make-obsolete-variable.

2004-09-08  Stefan  <monnier@iro.umontreal.ca>

	* vc-arch.el (vc-arch-state): Fix parsing for `names' method.

2004-09-08  Juri Linkov  <juri@jurta.org>

	* replace.el (perform-replace): Use `query-replace-descr'.

	* cus-start.el (history-delete-duplicates): Specify customization.

	* diff-mode.el (diff-mode-map):
	* progmodes/compile.el (compilation-mode-map):
	* progmodes/grep.el (grep-mode-map):
	* replace.el (occur-mode-map): Rename `next-error-follow-mode'
	to `next-error-follow-minor-mode'.

2004-09-08  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* isearch.el (isearch-lazy-highlight-update): Take into account
	the case of zero-length match at the search bound.

2004-09-08  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-rect.el (cua--highlight-rectangle): Fix last
	change.  Use zero width overlays when necessary.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* subr.el (split-string): Docfix.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-generate-call-tree): Doc fix.
	(display-call-tree): Ensure newline after caller/calls blocks.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* startup.el (command-line-1): Make option
	--directory/-L modify `load-path' straight away.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* progmodes/grep.el (grep-mode): Use normal autoload cookie.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>
